<resources>
    <string name="app_name">ComplaintB</string>
    <string name="login">LOGIN</string>
    <string name="not_registered_yet_sign_up_here">not registered yet ? sign up here</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgir_your_pasword">forgir your pasword!</string>
    <string name="nitrrimg">nitrrImg</string>
    <string name="forgot_your_password">forgot your password !</string>
    <string name="e_mail1">E-mail</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_a_user">Already a user ?</string>
    <string name="nitrrimg1">nitrrImg</string>
    <string name="e_mail2">E-mail</string>
    <string name="reset_email">Reset Email</string>
    <string name="reset">Reset</string>
    <string name="enter_your_registered_email_address_to_reset_your_password_a_reset_link_will_be_sent_to_your_email">Enter your registered Email address to reset your password. A reset link will be sent to your Email.</string>
    <string name="back">back</string>
    <string name="reserlogo">reserLogo</string>
    <string name="sign_out">Sign Out</string>
    <string name="student_login">Student Login</string>
    <string name="faculty_login">Faculty Login</string>
    <string name="anonymous_login">Anonymous Login</string>
    <string name="nitwimg">nitWimg</string>
    <string name="forgot_your_password1">Forgot your Password!</string>
    <string name="not_registered_yet_click_here_to_signup">Not registered yet? Click here to SIgnUp</string>
    <string name="forgot_your_password2">Forgot your password!</string>
    <string name="not_registered_yet_click_here_to_sign1up">Not registered yet? Click here to SignUp</string>
    <string name="imgv">imgv</string>
    <string name="branch">Branch</string>
    <string name="semester">Semester</string>
    <string name="roll_no">Roll No.</string>
    <string name="registarion_details">REGISTARION DETAILS</string>
    <string name="enrolment_no">Enrolment No.</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="details">Details</string>
    <string name="log_out">Log Out</string>
    <string name="back123"><![CDATA[<<Back]]></string>
    <string name="profile">Profile</string>
    <string name="button">Button</string>
    <string name="add_complaint">Add Complaint</string>
    <string name="view_complaint">View Complaint</string>
    <string name="remove_complaint">Remove Complaint</string>
    <string name="about">About</string>
    <string name="select_the_type_of_complaint">SELECT THE TYPE OF COMPLAINT</string>
    <string name="complaints">COMPLAINTS</string>
    <string name="backx">TODO</string>
    <string name="enter_complaint_here">enter complaint here</string>
    <string name="buttonc">Button</string>
    <string name="submitxy">Submit</string>
    <string name="back_to_complaints"><![CDATA[<<Back to Complaints]]></string>
    <string name="back_to_home"><![CDATA[<<Back to Home]]></string>
    <string name="select_complaint_no">Select Complaint No.</string>
    <string name="show">show</string>
    <string name="backd"><![CDATA[<-Back]]></string>
    <string name="returnX">return</string>
    <string name="turn">turn</string>
    <string name="go_back"><![CDATA[<<Go Back]]></string>
    <string name="your_complaint_is">YOUR COMPLAINT IS</string>
    <string name="complaint_type">COMPLAINT TYPE :</string>
    <string name="complaint_description">COMPLAINT DESCRIPTION :</string>
    <string name="complaint_number">COMPLAINT NUMBER :</string>
    <string name="complaint_date">COMPLAINT DATE :</string>
    <string name="imgvaa">TODO</string>
</resources>
