<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <Button
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#FF1744"
            android:drawableTop="@drawable/ic_person_add_black_24dp"
            android:text="@string/add_complaint"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/viewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#FF4081"
            android:drawableTop="@drawable/ic_remove_red_eye_black_24dp"
            android:text="@string/view_complaint"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/removeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#E040FB"
            android:drawableTop="@drawable/ic_delete_black_24dp"
            android:text="@string/remove_complaint"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/aboutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:background="#FFD600"
            android:drawableTop="@drawable/ic_people_black_24dp"
            android:text="@string/about"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>